tests/baselines/reference/parservoidInQualifiedName1.errors.txt
parservoidInQualifiedName1.ts(1,13): error TS1005: ',' expected.


==== parservoidInQualifiedName1.ts (1 errors) ====
    var v : void.x;
                ~
!!! error TS1005: ',' expected.